<resources>
    <string name="app_name">Assignment2</string>
    <string name="order_history">Order History</string>
    <string name="about">About</string>
    <string name="size">Size:</string>
    <string name="ice_cream">Ice Cream:</string>
    <string name="ice_cream_sundae_maker">Ice Cream Sundae Maker</string>
    <string name="_3_14">$3.14</string>
    <string name="peanuts">Peanuts</string>
    <string name="almonds">Almonds</string>
    <string name="strawberries">Strawberries</string>
    <string name="gummy_bears">Gummy Bears</string>
    <string name="m_amp_ms"><![CDATA[M&Ms]]></string>
    <string name="brownies">Brownies</string>
    <string name="oreos">Oreos</string>
    <string name="marshmallows">Marshmallows</string>
    <string name="hot_fudge">Hot Fudge</string>
    <string name="_1_oz">1 oz</string>
    <string name="the_works">The Works!</string>
    <string name="reset">Reset</string>
    <string name="order">Order</string>
</resources>