<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/title_linearLayout"
        android:layout_width="376dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="53dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/iu" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ice_cream_sundae_maker"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="53dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/iu" />
    </LinearLayout>

    <TextView
        android:id="@+id/price_textView"
        android:layout_width="116dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/_3_14"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout" />

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout" />

    <Spinner
        android:id="@+id/flavors_spinner"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout" />

    <TextView
        android:id="@+id/iceCream_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="92dp"
        android:text="@string/ice_cream"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout" />

    <TextView
        android:id="@+id/size_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="136dp"
        android:text="@string/size"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout" />

    <LinearLayout
        android:layout_width="148dp"
        android:layout_height="202dp"
        android:layout_marginStart="52dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695">

        <CheckBox
            android:id="@+id/peanuts_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/peanuts" />

        <CheckBox
            android:id="@+id/almonds_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/almonds" />

        <CheckBox
            android:id="@+id/strawberries_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/strawberries" />

        <CheckBox
            android:id="@+id/gummyBears_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/gummy_bears" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="201dp"
        android:layout_marginEnd="56dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696">

        <CheckBox
            android:id="@+id/emeniem_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/m_amp_ms" />

        <CheckBox
            android:id="@+id/brownies_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/brownies" />

        <CheckBox
            android:id="@+id/oreos_checkBox"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/oreos" />

        <CheckBox
            android:id="@+id/marshmallows_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleCheckBox"
            android:text="@string/marshmallows" />

    </LinearLayout>

    <TextView
        android:id="@+id/hotFudge_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="116dp"
        android:text="@string/hot_fudge"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="215dp"
        android:layout_height="28dp"
        android:layout_marginBottom="112dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/oz_textView"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginBottom="112dp"
        android:text="@string/_1_oz"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/theWorks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/the_works"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="32dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/order_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/theWorks_button" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>